--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inubekit/your-component-name",
+  "name": "@inubekit/user",
   "homepage": "https://inubeds.vercel.app/",
   "author": "inube",
   "main": "dist/index.es.js",
@@ -18,7 +18,8 @@
     }
   },
   "files": [
-    "dist/index.es.js"
+    "dist/index.es.js",
+    "dist/index.d.ts"
   ],
   "scripts": {
     "dev": "vite",
@@ -34,10 +35,15 @@
     "postversion": "git push --follow-tags && npm run auto release"
   },
   "dependencies": {
+    "@inubekit/avatar": "^1.0.0",
+    "@inubekit/foundations": "^1.1.2",
+    "@inubekit/stack": "^1.1.0",
+    "@inubekit/text": "^1.3.0",
     "@types/styled-components": "^5.1.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "vite-plugin-dts": "^3.7.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
@@ -45,7 +51,6 @@
     "@storybook/addon-essentials": "^7.6.7",
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
-    "@storybook/addon-onboarding": "^1.0.10",
     "@storybook/blocks": "^7.6.7",
     "@storybook/react": "^7.6.7",
     "@storybook/react-vite": "^7.6.7",
