--- a/package.json
+++ b/package.json
@@ -39,11 +39,9 @@
     "@inubekit/foundations": "^1.1.2",
     "@inubekit/stack": "^1.1.0",
     "@inubekit/text": "^1.3.0",
-    "@types/styled-components": "^5.1.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8",
-    "vite-plugin-dts": "^3.7.2"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
@@ -70,7 +68,8 @@
     "prettier": "^3.1.1",
     "storybook": "^7.6.7",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-dts": "^3.7.2"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
