fix(package.json): adjust script to release

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "auto": "auto",
     "changelog": "npm run auto changelog",
     "version": "rm -rf dist && npm run build",
-    "postversion": "git push --follow-tags && npm run auto release"
+    "release": "git push --follow-tags && npm run auto release"
   },
   "dependencies": {
     "@inubekit/avatar": "^2.0.0",
