feat(auto): add auto publish

--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "auto": "auto",
     "changelog": "npm run auto changelog",
     "version": "rm -rf dist && npm run build",
-    "release": "git push --follow-tags && npm run auto release"
+    "release": "git push --follow-tags && npm run auto release",
+    "autorelease": "auto shipit"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "dependencies": {
     "@inubekit/avatar": "^2.0.0",
     "@inubekit/foundations": "^2.5.0",
-    "@inubekit/stack": "^2.0.0",
+    "@inubekit/stack": "1.0.0",
     "@inubekit/text": "^2.1.0"
   },
   "peerDependencies": {
@@ -75,5 +80,14 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/selsa-inube/inubekit-user.git"
+  },
+  "auto": {
+    "plugins": [
+      "npm"
+    ]
   }
 }
