--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@inubekit/avatar": "^2.0.0",
-    "@inubekit/foundations": "^2.5.0",
-    "@inubekit/stack": "1.0.0",
-    "@inubekit/text": "^2.1.0"
+    "@inubekit/avatar": "^2.0.1",
+    "@inubekit/foundations": "^2.12.1",
+    "@inubekit/stack": "^2.1.1",
+    "@inubekit/text": "^2.2.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -55,6 +55,7 @@
     "@commitlint/config-conventional": "^18.4.4",
     "@storybook/addon-essentials": "^8.0.2",
     "@storybook/addon-interactions": "^8.0.2",
+    "@storybook/addon-onboarding": "^8.0.6",
     "@storybook/addon-links": "^8.0.2",
     "@storybook/blocks": "^8.0.2",
     "@storybook/react": "^8.0.2",
