--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
   "dependencies": {
     "@inubekit/avatar": "^2.27.1",
     "@inubekit/foundations": "^5.11.2",
-    "@inubekit/stack": "^3.8.0",
-    "@inubekit/text": "^2.17.0",
-    "@inubekit/menu": "^1.11.4"
+    "@inubekit/menu": "^1.11.4",
+    "@inubekit/stack": "^3.8.1",
+    "@inubekit/text": "^2.17.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
