--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@inubekit/avatar": "^2.31.0",
     "@inubekit/foundations": "^5.11.3",
+    "@inubekit/hooks": "^1.2.0",
     "@inubekit/menu": "^2.0.0",
     "@inubekit/stack": "^3.8.1",
     "@inubekit/text": "^2.17.0"
